--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,22 +1,38 @@
+/* Global Styles */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 
 html {
   scroll-behavior: smooth;
 }
 
 body {
-  background-color: #fff2d5; 
+  background-color:antiquewhite; 
   color: #333; 
   font-family: 'Arial', sans-serif;
 }
 
-section {
-  background-color: antiquewhite;
+/* Slideshow Styles */
+.slideshow {
+  position: relative;
+  height: 100vh;
 }
 
+.slideshow div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  background-position: center;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
 
-#about, #project, #contact {
-  background-color: #f7f7f7;
+.slideshow div.active {
+  opacity: 1;
 }
