--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,11 +47,11 @@ body {
   transform: translateY(0);
 }
 
-/* Custom Scrollbar Styles */
+
 body {
-  --sb-track-color: #232E33;
-  --sb-thumb-color: #6BAF8D;
-  --sb-size: 14px;
+  --sb-track-color: antiquewhit;
+  --sb-thumb-color: rgb(51, 51, 51);
+  --sb-size: 12px;
 }
 
 body::-webkit-scrollbar {
@@ -60,12 +60,13 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-track {
   background: var(--sb-track-color);
-  border-radius: 3px;
+  border-radius: 1px;
 }
 
 body::-webkit-scrollbar-thumb {
   background: var(--sb-thumb-color);
-  border-radius: 3px;
+  border-radius: 1px;
+  border: 3px solid #5f5f5f;
 }
 
 @supports not(selector(::-webkit-scrollbar)) {
