--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,7 +35,6 @@ body {
   opacity: 1;
 }
 
-/* Fade-in Effect Styles */
 .fade-in {
   opacity: 0;
   transform: translateY(20px);
@@ -47,11 +46,12 @@ body {
   transform: translateY(0);
 }
 
-
+/* Scrollbar Styles */
 body {
-  --sb-track-color: antiquewhit;
-  --sb-thumb-color: rgb(51, 51, 51);
-  --sb-size: 12px;
+  --sb-track-color: antiquewhite;
+  --sb-thumb-color: #888; /* Light grey for a softer look */
+  --sb-thumb-hover-color: #555; /* Darker grey on hover */
+  --sb-size: 10px; /* Slightly smaller size */
 }
 
 body::-webkit-scrollbar {
@@ -60,17 +60,42 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-track {
   background: var(--sb-track-color);
-  border-radius: 1px;
+  border-radius: 10px; 
 }
 
 body::-webkit-scrollbar-thumb {
   background: var(--sb-thumb-color);
-  border-radius: 1px;
-  border: 3px solid #5f5f5f;
+  border-radius: 10px; 
+  border: 3px solid antiquewhite; 
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background: var(--sb-thumb-hover-color);
 }
 
 @supports not(selector(::-webkit-scrollbar)) {
   body {
+    scrollbar-width: thin;
     scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
   }
+}
+
+.github-button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #333;
+  color: #fff;
+  padding: 10px 15px;
+  border-radius: 25px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.github-button:hover {
+  background-color: #555;
+}
+
+.github-button svg {
+  margin-right: 8px;
 }
