--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,10 @@ html {
   scroll-behavior: smooth;
 }
 
+header {
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
+
 body {
   background-color: antiquewhite; 
   color: #333; 
@@ -98,4 +102,40 @@ body::-webkit-scrollbar-thumb:hover {
 
 .github-button svg {
   margin-right: 8px;
+}
+
+
+
+header {
+  transition: backdrop-filter 0.3s, box-shadow 0.3s, background-color 0.3s;
+}
+
+.bg-blur {
+  background-color: rgba(255, 255, 255, 0.835); 
+  backdrop-filter: blur(500px); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.nav-link {
+  position: relative;
+  color: black;
+  text-decoration: none;
+}
+
+.nav-link::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.3s ease;
+}
+
+.nav-link:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
 }
