update style of web

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@ header {
 }
 
 body {
-  background-color: antiquewhite; 
+  background-color: blue-black; 
   color: #333; 
   font-family: 'Arial', sans-serif;
 }
